# mimoe-local-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.json
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: __init__.py  config.py  core.py  llm.py  logging_config.py  main.py  server.py  tools.py
mimoe_local_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_core.py  test_llm.py  test_logging.py  test_tools.py
